Second pass cleaning Core Pure Plugin