@@ -13,12 +13,13 @@
 //  limitations under the License.
 
 
-package org.finos.legend.engine.pure.code.core;
+package org.finos.legend.pure.code.core.external.format.xml;
 
 import org.eclipse.collections.api.list.MutableList;
 import org.finos.legend.engine.language.pure.compiler.toPureGraph.PureModel;
-import org.finos.legend.pure.code.core.RelationalJavaBindingPureCoreExtension;
-import org.finos.legend.pure.code.core.RelationalPureCoreExtension;
+import org.finos.legend.engine.pure.code.core.PureCoreExtension;
+import org.finos.legend.engine.pure.code.core.PureCoreExtensionLoader;
+import org.finos.legend.pure.code.core.XMLPureCoreExtension;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -28,8 +29,7 @@ public class TestExtensionAvailable
     public void testServiceAvailable()
     {
         MutableList<PureCoreExtension> extensions =  PureCoreExtensionLoader.extensions();
-        Assert.assertEquals(4, extensions.size());
-        Assert.assertEquals(1, extensions.selectInstancesOf(RelationalJavaBindingPureCoreExtension.class).get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).size());
-        Assert.assertEquals("PlatformBindingExtension", extensions.get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).getFirst()._type());
+        Assert.assertEquals(1, extensions.selectInstancesOf(XMLPureCoreExtension.class).get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).size());
+        Assert.assertEquals("External Format - XSD", extensions.get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).getFirst()._type());
     }
 }
